WebSocket_test/nohup.out
  File "server.py", line 1
    from websocket-server import WebsocketServer
                  ^
SyntaxError: invalid syntax
